# heat

./: CMakeLists.txt  README  README.dox  README.md  heat.f90  heat_par.f90  heat_plot.py  heat_seq.f90  mat_utils.f90
lib/: CMakeLists.txt
